fix: z-index for popup messages

--- a/public/styles/global.styl
+++ b/public/styles/global.styl
@@ -156,6 +156,7 @@ body
             top logo-padding
             right logo-padding
             width 225px
+            z-index 1000
             div.popup-message
                 margin-bottom logo-padding
                 padding 10px
